Update copy for 2019

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>João - Product designer</title>
-    <meta name="description" content="Product designer who makes tasks easier for people, through empathy and thoughtful design">
+    <title>João - Senior Product Designer</title>
+    <meta name="description" content="Senior Product Designer with over a decade of hands-on experience in full-stack design for the web">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="google-site-verification" content="2shu_KfJ0xhCJ4fWUc_Qqf7iPCXsiRnuEYhLqgjzZq8" />
 
@@ -18,22 +18,22 @@
     <!-- Twitter -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@joaotiago" />
-    <meta name="twitter:title" content="João › Product designer" />
-    <meta name="twitter:description" content="Product designer who makes tasks easier for people, through empathy and thoughtful design" />
+    <meta name="twitter:title" content="João › Senior Product Designer" />
+    <meta name="twitter:description" content="Senior Product Designer with over a decade of hands-on experience in full-stack design for the web" />
     <meta name="twitter:image" content="http://joao.pt/images/profile.jpg" />
     <meta name="twitter:url" content="http://joao.pt" />
 
     <!-- Open Graph -->
-    <meta property="og:title" content="João › Product designer" />
+    <meta property="og:title" content="João › Senior Product Designer" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://joao.pt/" />
     <meta property="og:image" content="http://joao.pt/images/profile.jpg" />
-    <meta property="og:description" content="Product designer who makes tasks easier for people, through empathy and thoughtful design" />
+    <meta property="og:description" content="Senior Product Designer with over a decade of hands-on experience in full-stack design for the web" />
 
     <!-- Mobile -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="João › Product designer">
+    <meta name="apple-mobile-web-app-title" content="João › Senior Product Designer">
     <meta name="mobile-web-app-capable" content="yes">
 
   </head>
@@ -57,21 +57,21 @@
           -->
         </nav>
         <div class="headline">
-          <h1 itemprop="title" class="title"><span class="role">Product designer</span> who makes tasks easier for people, through empathy and thoughtful design</h1>
+          <h1 itemprop="title" class="title"><span class="role">Senior Product Designer</span> with over a decade of hands-on experience in full-stack design for the web</h1>
           <img src="http://joao.pt/images/profile.jpg" alt="Photo of João Ramos" itemprop="photo" class="photo" />
         </div>
       </header>
 
       <section class="bio wrapper">
-        <h4>I’ve been designing and coding web <em>sites</em> and <em>apps</em> for the past seven years, for start-ups with self-service and enterprise products. It has been a blast! I’m now doing product design for the authoring experience at <a href="http://contentful.com" title="Contentful GmbH" itemprop="affiliation" class="org" target="_blank">Contentful</a>. I’m still learning every single day.</h4>
+        <h4>Seasoned in end-to-end product design, with a strong inclination for participatory design and collaboration in agile-driven teams. I'm at my best facilitating ideation workshops and co-design sessions. Currently co-leading the design system and the authoring experience design at <a href="http://contentful.com" title="Contentful GmbH" itemprop="affiliation" class="org" target="_blank">Contentful</a>.</h4>
       </section>
 
       <section class="practice wrapper">
-        <h2>Product design as an holistic practice</h2>
+        <h2>Product Design as an holistic practice</h2>
         <span class="description">My ethos and working style on product design</span>
         <div class="copy">
-          <p>I believe thoughtful product design addresses people, problem, and context as a whole. The key is to explore them early on through the <em>right</em> kind of research.</p>
-          <p>Most of my time is spent asking questions and talking to customers, bouncing sketches and diagrams, drawing testicles on post-its, and running ideation exercises.</p>
+          <p>I believe thoughtful product design addresses people, problem space, and context as a system. The key is to explore that system early on through the <em>right</em> kind of research.</p>
+          <p>Most of my time is spent asking questions and talking to stakeholders, bouncing sketches and diagrams, drawing gonads on post-its, and facilitating workshops.</p>
         </div>
       </section>
 
@@ -79,17 +79,17 @@
         <div class="currently wrapper">
           <small>Currently</small>
           <p>Contentful, Berlin</p>
-          <h4>Product designer</h4>
+          <h4>Product Designer</h4>
         </div>
         <div class="before wrapper">
           <small>Previously</small>
-          <p>Designer and developer at <a href="http://sumup.com" title="SumUp GmbH" target="_blank">SumUp</a>, <a href="https://github.com/blippex" title="Blippex" target="_blank">Blippex</a>, <a href="https://www.crunchbase.com/organization/egoarchive" title="Archify" target="_blank">Archify</a>. Co-founded a design studio back home in Portugal called Jungle Collective with 8 other designers. Conducted research at <a href="https://www.ua.pt/" title="Universidade de Aveiro" target="_blank">Universidade de Aveiro</a>, where I also finished my studies. Published my Master’s thesis about visualization as a tool for decision-making at <a href="https://www.itu.dk/" tile="IT University of Copenhagen, Denmark" target="_blank">ITU</a> and ran a practical course at <a href="http://www.cbs.dk/en" tile="Copenhagen Business School, Denmark" target="_blank">CBS</a>, both in beautiful, cozy Copenhagen.</p>
+          <p>At <a href="http://sumup.com" title="SumUp GmbH" target="_blank">SumUp</a>, <a href="https://www.crunchbase.com/organization/blippex" title="Blippex" target="_blank">Blippex</a>, <a href="https://www.crunchbase.com/organization/egoarchive" title="archify" target="_blank">archify</a>. Prior to that, I ran a design studio with friends from <a href="https://www.ua.pt/" title="Universidade de Aveiro" target="_blank">Universidade de Aveiro</a>, where I graduated and took a research scholarship from. Right before, I wrote a Master’s thesis in visualization as a tool for decision-making at <a href="https://www.itu.dk/" tile="IT University of Copenhagen, Denmark" target="_blank">ITU Copenhagen</a> and ran a course at <a href="http://www.cbs.dk/en" tile="Copenhagen Business School, Denmark" target="_blank">CBS Copenhagen</a> about strategic planning for online communication.</p>
         </div>
       </section>
 
       <footer class="bottom wrapper">
         <div class="copyright">
-          <span>João Ramos © 2007–2018</span>
+          <span>João Ramos © 2007–2019</span>
           <span>This website is hosted on <a href="http://github.com/joaoramos/joaoramos.github.io" rel="me" title="Repository on GitHub" onclick="ga('send', 'event', 'social', 'GitHub Pages');" target="_blank">GitHub</a></span>
         </div>
         <ul class="social">
