--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </section>
 
       <section class="practice wrapper">
-        <h2>Product Design as an holistic practice</h2>
+        <h2>Product design as a comprehensive practice</h2>
         <span class="description">My ethos and working style on product design</span>
         <div class="copy">
           <p>I believe thoughtful product design addresses people, problem space, and context as a system. The key is to explore that system early on through the <em>right</em> kind of research.</p>
@@ -83,7 +83,7 @@
         </div>
         <div class="before wrapper">
           <small>Previously</small>
-          <p>At <a href="http://sumup.com" title="SumUp GmbH" target="_blank">SumUp</a>, <a href="https://www.crunchbase.com/organization/blippex" title="Blippex" target="_blank">Blippex</a>, <a href="https://www.crunchbase.com/organization/egoarchive" title="archify" target="_blank">archify</a>. Prior to that, I ran a design studio with friends from <a href="https://www.ua.pt/" title="Universidade de Aveiro" target="_blank">Universidade de Aveiro</a>, where I graduated and took a research scholarship from. Right before, I wrote a Master’s thesis in visualization as a tool for decision-making at <a href="https://www.itu.dk/" tile="IT University of Copenhagen, Denmark" target="_blank">ITU Copenhagen</a> and ran a course at <a href="http://www.cbs.dk/en" tile="Copenhagen Business School, Denmark" target="_blank">CBS Copenhagen</a> about strategic planning for online communication.</p>
+          <p>At <a href="http://sumup.com" title="SumUp GmbH" target="_blank">SumUp</a>, <a href="https://www.crunchbase.com/organization/blippex" title="Blippex" target="_blank">Blippex</a>, <a href="https://www.crunchbase.com/organization/egoarchive" title="archify" target="_blank">archify</a>. Prior to that, I ran a design studio with friends from <a href="https://www.ua.pt/" title="Universidade de Aveiro" target="_blank">Universidade de Aveiro</a>, where I graduated and took a research scholarship from. Right before, I wrote a Master’s thesis in visualization as a tool for decision-making at <a href="https://www.itu.dk/" tile="IT University of Copenhagen, Denmark" target="_blank">ITU Copenhagen</a> and ran a course at <a href="http://www.cbs.dk/en" tile="Copenhagen Business School, Denmark" target="_blank">CBS Copenhagen</a> about strategic planning for online communication. What a ride!</p>
         </div>
       </section>
 
