--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>João - Senior Product Designer</title>
+    <title>João is a Senior Product Designer</title>
     <meta name="description" content="Senior Product Designer with over a decade of hands-on experience in full-stack design for the web">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="google-site-verification" content="2shu_KfJ0xhCJ4fWUc_Qqf7iPCXsiRnuEYhLqgjzZq8" />
@@ -18,13 +18,13 @@
     <!-- Twitter -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@joaotiago" />
-    <meta name="twitter:title" content="João › Senior Product Designer" />
+    <meta name="twitter:title" content="João is a Senior Product Designer" />
     <meta name="twitter:description" content="Senior Product Designer with over a decade of hands-on experience in full-stack design for the web" />
     <meta name="twitter:image" content="http://joao.pt/images/profile.jpg" />
     <meta name="twitter:url" content="http://joao.pt" />
 
     <!-- Open Graph -->
-    <meta property="og:title" content="João › Senior Product Designer" />
+    <meta property="og:title" content="João is a Senior Product Designer" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://joao.pt/" />
     <meta property="og:image" content="http://joao.pt/images/profile.jpg" />
@@ -33,7 +33,7 @@
     <!-- Mobile -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="João › Senior Product Designer">
+    <meta name="apple-mobile-web-app-title" content="João is a Senior Product Designer">
     <meta name="mobile-web-app-capable" content="yes">
 
   </head>
