--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
     <meta name="twitter:site" content="@joaotiago" />
     <meta name="twitter:title" content="João is a Senior Product Designer" />
     <meta name="twitter:description" content="Senior Product Designer with over a decade of hands-on experience in full-stack design for the web" />
-    <meta name="twitter:image" content="http://joao.pt/images/profile.jpg" />
-    <meta name="twitter:url" content="http://joao.pt" />
+    <meta name="twitter:image" content="https://joao.pt/images/profile.jpg" />
+    <meta name="twitter:url" content="https://joao.pt" />
 
     <!-- Open Graph -->
     <meta property="og:title" content="João is a Senior Product Designer" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="http://joao.pt/" />
-    <meta property="og:image" content="http://joao.pt/images/profile.jpg" />
+    <meta property="og:url" content="https://joao.pt/" />
+    <meta property="og:image" content="https://joao.pt/images/profile.jpg" />
     <meta property="og:description" content="Senior Product Designer with over a decade of hands-on experience in full-stack design for the web" />
 
     <!-- Mobile -->
@@ -58,7 +58,7 @@
         </nav>
         <div class="headline">
           <h1 itemprop="title" class="title"><span class="role">Senior Product Designer</span> with over a decade of hands-on experience in full-stack design for the web</h1>
-          <img src="http://joao.pt/images/profile.jpg" alt="Photo of João Ramos" itemprop="photo" class="photo" />
+          <img src="https://joao.pt/images/profile.jpg" alt="Photo of João Ramos" itemprop="photo" class="photo" />
         </div>
       </header>
 
