--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </header>
 
       <section class="bio wrapper">
-        <h4>Seasoned in end-to-end product design, with a strong inclination for participatory design and collaboration in agile-driven teams. I'm at my best facilitating ideation workshops and co-design sessions. Currently co-leading the design system and the authoring experience design at <a href="http://contentful.com" title="Contentful GmbH" itemprop="affiliation" class="org" target="_blank">Contentful</a>.</h4>
+        <h4>I'm a design generalist who uses sense-making, empathy, and design methods to drive quality, collaboration, and alignment. Seasoned in end-to-end product design, with a knack for participatory design. Comfortable in either side of the double diamond, in any blend of agile. I'm at my best facilitating ideation workshops and co-design sessions. Currently co-leading the design system and the authoring experience design at <a href="http://contentful.com" title="Contentful GmbH" itemprop="affiliation" class="org" target="_blank">Contentful</a>.</h4>
       </section>
 
       <section class="practice wrapper">
