Improve display of articles

--- a/index.html
+++ b/index.html
@@ -93,15 +93,15 @@
           <ul class="articles">
             <li>
               <a href="https://uxdesign.cc/ways-to-add-perspective-in-design-8cae9852c36a">Ways to add perspective in design</a>
-              <p><img src="images/uxcollective.png" alt="" /> UX Collective</p>
+              <p><img src="images/uxcollective.png" alt="" /> <strong>UX Collective</strong> – Published April 14, 2019</p>
             </li>
             <li>
               <a href="https://medium.com/contentful-design/empathy-as-a-tool-for-alignment-9f6c12b401db">Empathy as a tool for alignment</a>
-              <p><img src="images/contentful.png" alt="" /> Contentful Design</p>
+              <p><img src="images/contentful.png" alt="" /> <strong>Contentful Design</strong> – Published February 17, 2019</p>
             </li>
             <li>
               <a href="https://blog.prototypr.io/living-design-specs-4ce2833a4900">Saving time with living design specs</a>
-              <p><img src="images/prototypr.png" alt="" /> Prototypr</p>
+              <p><img src="images/prototypr.png" alt="" /> <strong>Prototypr</strong> – Published December 20, 2016</p>
             </li>
           </ul>
         </div>
