--- a/index.html
+++ b/index.html
@@ -92,6 +92,10 @@
           <small>Selected writing</small>
           <ul class="articles">
             <li>
+              <a href="https://uxplanet.org/five-books-that-helped-me-become-a-better-product-designer-6fd366ce8395">Five books that helped me become a better Product Designer</a>
+              <p><img src="images/uxplanet.png" alt="" /> <strong>UX Planet</strong> – Published November 15, 2019</p>
+            </li>
+            <li>
               <a href="https://uxdesign.cc/ways-to-add-perspective-in-design-8cae9852c36a">Ways to add perspective in design</a>
               <p><img src="images/uxcollective.png" alt="" /> <strong>UX Collective</strong> – Published April 14, 2019</p>
             </li>
