--- a/index.html
+++ b/index.html
@@ -2,39 +2,39 @@
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8">
+    <title>Hi there, I'm João 👋</title>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>João - Senior Product Designer</title>
-    <meta name="description" content="Senior product designer with over a decade of hands-on experience in full-stack design for the web">
+    <meta name="description" content="I’m a designer who drives collaboration and alignment in teams, using facilitation and systems thinking">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="google-site-verification" content="2shu_KfJ0xhCJ4fWUc_Qqf7iPCXsiRnuEYhLqgjzZq8" />
     <meta name="cf-2fa-verify" content="7becfc173519c75">
+    <meta name="theme-color" content="#222222">
 
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-    <link rel="stylesheet" href="styles/index.css">
-    <script src="https://use.typekit.net/kbv1tff.js"></script>
-    <script>try{Typekit.load({ async: true });}catch(e){}</script>
+    <link href="styles.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@joaotiago" />
-    <meta name="twitter:title" content="João - Senior Product Designer" />
-    <meta name="twitter:description" content="Senior product designer with over a decade of hands-on experience in full-stack design for the web" />
+    <meta name="twitter:title" content="João – Product Design Lead" />
+    <meta name="twitter:description" content="I’m a designer who drives collaboration and alignment in teams, using facilitation and systems thinking" />
     <meta name="twitter:image" content="https://joao.pt/images/profile.jpg" />
     <meta name="twitter:url" content="https://joao.pt" />
 
     <!-- Open Graph -->
-    <meta property="og:title" content="João - Senior Product Designer" />
+    <meta property="og:title" content="João – Product Design Lead" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://joao.pt/" />
     <meta property="og:image" content="https://joao.pt/images/profile.jpg" />
-    <meta property="og:description" content="Senior product designer with over a decade of hands-on experience in full-stack design for the web" />
+    <meta property="og:description" content="I’m a designer who drives collaboration and alignment in teams, using facilitation and systems thinking" />
 
     <!-- Mobile -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="João - Senior Product Designer">
+    <meta name="apple-mobile-web-app-title" content="João – Product Design Lead">
     <meta name="mobile-web-app-capable" content="yes">
 
   </head>
@@ -44,110 +44,197 @@
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <main class="about fn n" itemscope itemtype="http://data-vocabulary.org/Person">
+    <section class="main headline">
+      <h1>I’m a designer who leads teams using facilitation and systems thinking</h1>
+    </section>
 
-      <header class="top wrapper">
-        <nav>
-          <a href="#" itemprop="name" class="given-name">João Ramos</a>
-          <!--
-          <ul role="nav">
-            <li>Projects</li>
-            <li>Library</li>
-            <li>Contact</li>
-          </ul>
-          -->
-        </nav>
-        <div class="headline">
-          <h1 itemprop="title" class="title"><span class="role">Senior product designer</span> with over a decade of hands-on experience in full-stack design for the web</h1>
-          <img src="https://joao.pt/images/profile.jpg" alt="Photo of João Ramos" itemprop="photo" class="photo" />
-        </div>
-      </header>
+    <section class="detail halves">
+      <h2>As a product design lead with over a decade of experience, I’m now at my best enabling and coaching others.</h2>
+      <p>I’m currently focused in design enablement and operations, facilitation, and systemic design. Previous areas of experience include holistic user experience design mostly for web apps, interface design and development, and web and graphic design for offline and online marketing.</p>
+    </section>
 
-      <section class="bio wrapper">
-        <h4>I'm a design generalist who uses sense-making, empathy, and design methods to drive quality, collaboration, and alignment. Seasoned in end-to-end product design, with a knack for participatory design. Comfortable in either side of the double diamond, in any blend of agile. I'm at my best facilitating ideation workshops and co-design sessions. Currently co-leading the design system and the authoring experience design at <a href="http://contentful.com" title="Contentful GmbH" itemprop="affiliation" class="org" target="_blank">Contentful</a>.</h4>
-      </section>
-
-      <section class="practice wrapper">
-        <h2>Product design as a comprehensive practice</h2>
-        <span class="description">My ethos and working style on product design</span>
-        <div class="copy">
-          <p>I believe thoughtful product design addresses people, problem space, and context as a system. The key is to explore that system early on through the <em>right</em> kind of research.</p>
-          <p>Most of my time is spent asking questions and talking to stakeholders, bouncing sketches and diagrams, drawing gonads on post-its, and facilitating workshops.</p>
-        </div>
-      </section>
-
-      <section class="experience">
-        <div class="currently wrapper">
-          <small>Currently</small>
-          <p>Contentful, Berlin</p>
-          <h4>Product Designer</h4>
-        </div>
-        <div class="before wrapper">
-          <small>Previously</small>
-          <p>At <a href="http://sumup.com" title="SumUp GmbH" target="_blank">SumUp</a>, <a href="https://www.crunchbase.com/organization/blippex" title="Blippex" target="_blank">Blippex</a>, <a href="https://www.crunchbase.com/organization/egoarchive" title="archify" target="_blank">archify</a>. Prior to that, I ran a design studio with friends from <a href="https://www.ua.pt/" title="Universidade de Aveiro" target="_blank">Universidade de Aveiro</a>, where I graduated and took a research scholarship from. Right before, I wrote a Master’s thesis in visualization as a tool for decision-making at <a href="https://www.itu.dk/" tile="IT University of Copenhagen, Denmark" target="_blank">ITU Copenhagen</a> and ran a course at <a href="http://www.cbs.dk/en" tile="Copenhagen Business School, Denmark" target="_blank">CBS Copenhagen</a> about strategic planning for online communication.</p>
-        </div>
-      </section>
-
-      <section class="writing wrapper">
-        <div>
-          <small>Selected writing</small>
-          <ul class="articles">
-            <li>
-              <a href="https://uxplanet.org/five-books-that-helped-me-become-a-better-product-designer-6fd366ce8395">Five books that helped me become a better Product Designer</a>
-              <p><img src="images/uxplanet.png" alt="" /> <strong>UX Planet</strong> – Published November 15, 2019</p>
-            </li>
-            <li>
-              <a href="https://uxdesign.cc/ways-to-add-perspective-in-design-8cae9852c36a">Ways to add perspective in design</a>
-              <p><img src="images/uxcollective.png" alt="" /> <strong>UX Collective</strong> – Published April 14, 2019</p>
-            </li>
-            <li>
-              <a href="https://medium.com/contentful-design/empathy-as-a-tool-for-alignment-9f6c12b401db">Empathy as a tool for alignment</a>
-              <p><img src="images/contentful.png" alt="" /> <strong>Contentful Design</strong> – Published February 17, 2019</p>
-            </li>
-            <li>
-              <a href="https://blog.prototypr.io/living-design-specs-4ce2833a4900">Saving time with living design specs</a>
-              <p><img src="images/prototypr.png" alt="" /> <strong>Prototypr</strong> – Published December 20, 2016</p>
-            </li>
-          </ul>
-        </div>
-      </section>
-
-      <footer class="bottom wrapper">
-        <div class="copyright">
-          <span>João Ramos © 2007–2020</span>
-        </div>
-        <ul class="social">
-          <li>
-            <a href="https://medium.com/@joaotiago" rel="me" title="Articles on Medium" onclick="ga('send', 'event', 'social', 'Medium');" target="_blank">
-              Medium
-            </a>
+    <section class="thirds">
+      <div class="experience list">
+        <strong>Experience</strong>
+        <ul>
+          <li class="job">
+            <p class="what">Sr. Product designer</p>
+            <p class="where">Contentful, Berlin</p>
+            <p class="when">2016 – Present</p>
           </li>
-          <li>
-            <a href="http://instagram.com/joaoramospt" rel="me" title="Pictures on Instagram" onclick="ga('send', 'event', 'social', 'Instagram');" target="_blank">
-              Instagram
-            </a>
+
+          <li class="job">
+            <p class="what">Lead designer</p>
+            <p class="where">SumUp, Berlin</p>
+            <p class="when">2015 – 2016</p>
           </li>
-          <li>
-            <a href="http://linkedin.com/in/johnzramos" rel="me" title="LinkedIn profile" onclick="ga('send', 'event', 'social', 'LinkedIn');" target="_blank">
-              LinkedIn
-            </a>
+
+          <li class="job">
+            <p class="what">Full-stack designer</p>
+            <p class="where">SumUp, Berlin</p>
+            <p class="when">2014 – 2015</p>
           </li>
+
+          <li class="job">
+            <p class="what">Full-stack designer</p>
+            <p class="where">archify, Berlin</p>
+            <p class="when">2012 – 2013</p>
+          </li>
+
           <li>
-            <a href="http://twitter.com/joaotiago" rel="me" title="Updates on Twitter" onclick="ga('send', 'event', 'social', 'Twitter');" target="_blank">
-              Twitter
-            </a>
+            <a href="https://www.linkedin.com/in/johnzramos" target="_blank">More on LinkedIn</a>
           </li>
         </ul>
-      </footer>
-    </main>
+      </div>
+      <div class="tools list">
+        <strong>Key tools</strong>
+        <ul>
+          <li>Design studio</li>
+          <li>Concept mapping</li>
+          <li>Directed storytelling</li>
+          <li>Mindmapping</li>
+          <li>Participatory design</li>
+          <li>Role-playing</li>
+          <li>Scenario mapping</li>
+          <li>Empathy mapping</li>
+          <li>Stakeholder mapping</li>
+          <li>Journey mapping</li>
+          <li>Consequence mapping</li>
+          <li>Value prop. canvas</li>
+          <li>Task analysis</li>
+        </ul>
+      </div>
+      <div class="profile list">
+        <strong>Profile</strong>
+        <ul>
+          <li>Over the last few years, I hopped between the roles of team lead, scrum master, and design lead, mostly as an individual contributor.</li>
+          <li>My Gallup's CliftonStrengths are Restorative, Intellection, Consistency, Harmony, Input – and have been consistent across my career.</li>
+          <li>Currently hosting <a href="http://designsystems.berlin" target="_blank">Design Systems Berlin</a></li>
+        </ul>
+      </div>
+    </section>
+
+    <div class="picture">
+      <img src="images/picture.jpg" alt="">
+    </div>
+
+    <section class="short headline">
+      <div>I’m free to mentor designers wishing to level up with design methods, facilitation, and sense-making</div>
+    </section>
+
+    <section class="mentor halves">
+      <p>If you feel you could use some perspective or need help getting your career off the ground, I'd be happy to help out for free.</p>
+      <p>You're welcome to give me a shout on <a href="https://www.designed.org/" target="_blank">Designed.org</a> or <a href="http://designsocialclub.slack.com" target="_blank">Design Social Club</a> for a monthly mentoring session 👋</p>
+    </section>
+
+    <section>
+      <div class="work split list">
+        <strong>Selected work</strong>
+        <ul>
+          <li>
+            <span>Tasks and comments</span>
+            <a href="http://go.joao.pt/case-content-workflows" target="_blank">Ways for content editors to collaborate</a>
+            <em>Contentful</em> <em>Requires password</em>
+          </li>
+          <li class="soon">
+            <span>Navigating content</span>
+            <div>A take on advanced search, saved views, and nested content</div>
+            <em>Contentful</em> <em>Coming soon</em>
+          </li>
+          <li class="soon">
+            <span>Docs and guides for devs</span>
+            <div>Documentation and CLI tooling for developers to get started</div>
+            <em>Contentful</em> <em>Coming soon</em>
+          </li>
+          <li class="soon">
+            <span>Merchant transactions</span>
+            <div>A dashboard for merchant to access their transactions and issue refunds</div>
+            <em>SumUp</em> <em>Coming soon</em>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <section>
+      <div class="writing split list">
+        <strong>Selected writing</strong>
+        <ul>
+          <li>
+            <a href="/" target="_blank">Five books that helped me become a better Designer</a>
+            <span>UX Planet, 2019</span>
+          </li>
+          <li>
+            <a href="/" target="_blank">Ways to add perspective in design</a>
+            <span>UX Collective, 2019</span>
+          </li>
+          <li>
+            <a href="/" target="_blank">Empathy as a tool for alignment</a>
+            <span>Contentful Design, 2019</span>
+          </li>
+          <li>
+            <a href="/" target="_blank">Saving time with living design specs</a>
+            <span>Prototypr, 2016</span>
+          </li>
+        </ul>
+         
+      </div>
+    </section>
+
+    <section class="short headline">
+      <div>Give me a shout if you wish to learn more about my work and ways of working</div>
+    </section>
+
+    <section class="bio thirds">
+      <div class="social list">
+        <strong>Updates 🗞</strong>
+        <ul>
+          <li>
+            <img src="images/icons/Twitter.svg" alt="Twitter">
+            <a href="http://twitter.com/joaotiago" target="_blank">Twitter</a>
+          </li>
+          <!--
+          <li>
+            <img src="images/icons/Medium.svg" alt="Medium">
+            <a href="http://medium.com/@joaotiago" target="_blank">Medium</a>
+          </li>
+          -->
+          <li>
+            <img src="images/icons/LinkedIn.svg" alt="LinkedIn">
+            <a href="https://www.linkedin.com/in/johnzramos" target="_blank">LinkedIn</a>
+          </li>
+          <li>
+            <img src="images/icons/Github.svg" alt="Github">
+            <a href="https://github.com/joaoramos" target="_blank">Github</a>
+          </li>
+          <li>
+            <img src="images/icons/Instagram.svg" alt="Instagram">
+            <a href="https://www.instagram.com/its.joaoramos/" target="_blank">Instagram</a>
+          </li>
+          <li>
+            <img src="images/icons/SoundCloud.svg" alt="SoundCloud">
+            <a href="http://soundcloud.com/itsjoaoramos/" target="_blank">SoundCloud</a>
+          </li>
+          <li>
+            <img src="images/icons/YouTube.svg" alt="YouTube">
+            <a href="https://www.youtube.com/user/JohnnyMarbelo" target="_blank">YouTube</a>
+          </li>
+        </ul>
+      </div>
+      <div class="currently list">
+        <strong>Currently 👨🏻‍💻</strong>
+        <p>Product design and enablement at Contentful, currently focused on design systems, editorial experience, and thought leadership.</p>
+      </div>
+      <div class="personal list">
+        <strong>About 🧭</strong>
+        <p>Husband and father, with a knack for calisthenics, board riding, and early mornings. Relentless weekend traveller.</p>
+      </div>
+    </section>
 
     <script>
-      (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-      function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-      e.src='//www.google-analytics.com/analytics.js';
-      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-      ga('create','UA-3813449-21');ga('send','pageview');
+      window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
+      ga('create', 'UA-3813449-21', 'auto'); ga('set','transport','beacon'); ga('send', 'pageview')
     </script>
+    <script src="https://www.google-analytics.com/analytics.js" async></script>
+    
 </body>
 </html>
