Add icons, fix selected work, improve copy

--- a/index.html
+++ b/index.html
@@ -123,12 +123,12 @@
     </section>
 
     <section class="mentor halves">
-      <p>If you feel you could use some perspective or need help getting your career off the ground, I'd be happy to help out for free.</p>
-      <p>You're welcome to give me a shout on <a href="https://www.designed.org/" target="_blank">Designed.org</a> or <a href="http://designsocialclub.slack.com" target="_blank">Design Social Club</a> for a monthly mentoring session 👋</p>
+      <p>If you need some perspective or a little push getting your career off the ground, I'd be happy to help out.</p>
+      <p>Give me a shout on <a href="https://www.designed.org/" target="_blank">Designed.org</a> or <a href="http://designsocialclub.slack.com" target="_blank">Design Social Club</a> for an entirely free monthly mentoring session 👋</p>
     </section>
 
     <section>
-      <div class="work split list">
+      <div class="work list">
         <strong>Selected work</strong>
         <ul>
           <li>
@@ -160,20 +160,20 @@
         <strong>Selected writing</strong>
         <ul>
           <li>
-            <a href="/" target="_blank">Five books that helped me become a better Designer</a>
-            <span>UX Planet, 2019</span>
+            <a href="http://go.joao.pt/books" target="_blank">Five books that helped me become a better Designer</a>
+            <span><img src="images/icons/uxplanet.png" alt=""> UX Planet, 2019</span>
           </li>
           <li>
-            <a href="/" target="_blank">Ways to add perspective in design</a>
-            <span>UX Collective, 2019</span>
+            <a href="http://go.joao.pt/perspective-in-design" target="_blank">Ways to add perspective in design</a>
+            <span><img src="images/icons/uxcollective.png" alt=""> UX Collective, 2019</span>
           </li>
           <li>
-            <a href="/" target="_blank">Empathy as a tool for alignment</a>
-            <span>Contentful Design, 2019</span>
+            <a href="http://go.joao.pt/empathy-for-alignment" target="_blank">Empathy as a tool for alignment</a>
+            <span><img src="images/icons/contentful.png" alt=""> Contentful Design, 2019</span>
           </li>
           <li>
-            <a href="/" target="_blank">Saving time with living design specs</a>
-            <span>Prototypr, 2016</span>
+            <a href="http://go.joao.pt/living-design-specs" target="_blank">Saving time with living design specs</a>
+            <span><img src="images/icons/prototypr.png" alt=""> Prototypr, 2016</span>
           </li>
         </ul>
          
@@ -189,33 +189,24 @@
         <strong>Updates 🗞</strong>
         <ul>
           <li>
-            <img src="images/icons/Twitter.svg" alt="Twitter">
             <a href="http://twitter.com/joaotiago" target="_blank">Twitter</a>
           </li>
-          <!--
           <li>
-            <img src="images/icons/Medium.svg" alt="Medium">
             <a href="http://medium.com/@joaotiago" target="_blank">Medium</a>
           </li>
-          -->
           <li>
-            <img src="images/icons/LinkedIn.svg" alt="LinkedIn">
             <a href="https://www.linkedin.com/in/johnzramos" target="_blank">LinkedIn</a>
           </li>
           <li>
-            <img src="images/icons/Github.svg" alt="Github">
             <a href="https://github.com/joaoramos" target="_blank">Github</a>
           </li>
           <li>
-            <img src="images/icons/Instagram.svg" alt="Instagram">
             <a href="https://www.instagram.com/its.joaoramos/" target="_blank">Instagram</a>
           </li>
           <li>
-            <img src="images/icons/SoundCloud.svg" alt="SoundCloud">
             <a href="http://soundcloud.com/itsjoaoramos/" target="_blank">SoundCloud</a>
           </li>
           <li>
-            <img src="images/icons/YouTube.svg" alt="YouTube">
             <a href="https://www.youtube.com/user/JohnnyMarbelo" target="_blank">YouTube</a>
           </li>
         </ul>
